# face-detection-rust

./: .dockerignore  .env  .env.example  CHANGELOG.md  Cargo.toml  DOCKER.md  Dockerfile  QUICKREF.md  QUICKSTART.md  README.md  SETUP.md  SWAGGER.md  TESTING.md  docker-compose.yml  docker.sh  download_haarcascade.sh  face_recognition.db  schema.sql
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/add-face/: page.tsx
frontend/app/components/: Camera.tsx
frontend/app/detect/: page.tsx
src/: database.rs  main.rs
src/face_recognition/: handlers.rs  mod.rs  model.rs
