[package]
name = "face-recognition-be"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros", "fs"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["fs", "cors"] }
opencv = { version = "0.95", features = ["clang-runtime"] }
ndarray = "0.16"
image = "0.25"
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
utoipa = { version = "5.2", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }